--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -10,18 +10,7 @@ jobs:
   build-and-deploy:
     name: Deploy to Azure
     runs-on: ubuntu-latest
-    steps:    
-    - name: Azure Login Az Cli
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
-    - name: Azure CLI script
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.0.72
-        inlineScript: |
-          az group create --name RG-Workshop-Devops-ARM-Ansible-GitHub --location eastus2
+    steps:
 
     - name: Git - Get Sources
       uses: actions/checkout@master
@@ -35,6 +24,13 @@ jobs:
         AZURE_SERVICE_TENANT: ${{ secrets.AZURE_SERVICE_TENANT }}
 
     - name: Azure - Deploy ARM Template
+      uses: Azure/github-actions/arm@master
+      env:
+        AZURE_RESOURCE_GROUP: RG-Workshop-Devops-ARM-Ansible-GitHub
+        AZURE_TEMPLATE_LOCATION: ./ARM/azuredeployRG.json
+        AZURE_TEMPLATE_PARAM_LOCATION: ./ARM/azuredeployRG.parameters.json
+
+        - name: Azure - Deploy ARM Template
       uses: Azure/github-actions/arm@master
       env:
         AZURE_RESOURCE_GROUP: RG-Workshop-Devops-ARM-Ansible-GitHub
