--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -22,10 +22,20 @@ jobs:
         AZURE_SERVICE_APP_ID: ${{ secrets.AZURE_SERVICE_APP_ID }}
         AZURE_SERVICE_PASSWORD: ${{ secrets.AZURE_SERVICE_PASSWORD }}
         AZURE_SERVICE_TENANT: ${{ secrets.AZURE_SERVICE_TENANT }}
-        
+
     - name: Azure - Deploy ARM Template VM
       uses: Azure/github-actions/arm@master
       env:
         AZURE_RESOURCE_GROUP: RG-Workshop-Devops-ARM-Ansible-GitHub
         AZURE_TEMPLATE_LOCATION: ./ARM/azuredeploy.json
         AZURE_TEMPLATE_PARAM_LOCATION: ./ARM/azuredeploy.parameters.json
+
+    - name: Run playbook
+      uses: dawidd6/action-ansible-playbook@v2
+      with:
+        playbook: web.yml
+        directory: ./Ansible/main.yml
+        key: ${{secrets.SSH_PRIVATE_KEY}}
+        inventory: |
+          [all]
+          workshopdevopspierrc.eastus2.cloudapp.azure.com
