--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -34,7 +34,7 @@ jobs:
       uses: dawidd6/action-ansible-playbook@v2
       with:
         playbook: web.yml
-        directory: ./Ansible/main.yml
+        directory: ./main.yml
         key: ${{secrets.SSH_PRIVATE_KEY}}
         inventory: |
           [all]
