--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -8,42 +8,10 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Deploy to Azure
-    runs-on: ubuntu-latest
-    
+    name: Deploiement dans Azure
+    runs-on: ubuntu-latest    
     steps:
     - name: Azure Login Az Cli
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Azure CLI script Creation d'un "RG"
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.9.0
-        inlineScript: |
-          az group create --name Workshop-Devops-ARM-Ansible-GitHub --location eastus2
-
-    - name: Git - Get Sources
-      uses: actions/checkout@master
-
-    - name: Azure - Login ARM
-      uses: Azure/github-actions/login@master
-      env:
-        AZURE_SUBSCRIPTION: Peter_Azure
-        AZURE_SERVICE_APP_ID: ${{ secrets.AZURE_SERVICE_APP_ID }}
-        AZURE_SERVICE_PASSWORD: ${{ secrets.AZURE_SERVICE_PASSWORD }}
-        AZURE_SERVICE_TENANT: ${{ secrets.AZURE_SERVICE_TENANT }}
-
-    - name: Azure - Deploy ARM Template VM
-      uses: Azure/github-actions/arm@master
-      env:
-        AZURE_RESOURCE_GROUP: RG-Workshop-Devops-ARM-Ansible-GitHub
-        AZURE_TEMPLATE_LOCATION: ./ARM/azuredeploy.json
-        AZURE_TEMPLATE_PARAM_LOCATION: ./ARM/azuredeploy.parameters.json
-
-
-
-        
-
-
