--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -15,3 +15,10 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - name: Azure CLI script Creation d'un "RG"
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.9.0
+        inlineScript: |
+          az group create --name testaction --location eastus2
