--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -22,3 +22,11 @@ jobs:
         azcliversion: 2.9.0
         inlineScript: |
           az group create --name RG-Workshop-Devops-ARM-Ansible-GitHub --location eastus2
+
+    - name: Azure - Login ARM
+      uses: Azure/github-actions/login@master
+      env:
+        AZURE_SUBSCRIPTION: Peter_Azure
+        AZURE_SERVICE_APP_ID: ${{ secrets.AZURE_SERVICE_APP_ID }}
+        AZURE_SERVICE_PASSWORD: ${{ secrets.AZURE_SERVICE_PASSWORD }}
+        AZURE_SERVICE_TENANT: ${{ secrets.AZURE_SERVICE_TENANT }}
