--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -30,3 +30,6 @@ jobs:
         AZURE_SERVICE_APP_ID: ${{ secrets.AZURE_SERVICE_APP_ID }}
         AZURE_SERVICE_PASSWORD: ${{ secrets.AZURE_SERVICE_PASSWORD }}
         AZURE_SERVICE_TENANT: ${{ secrets.AZURE_SERVICE_TENANT }}
+
+    - name: Git - Get Sources
+      uses: actions/checkout@master
