--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -13,3 +13,12 @@ jobs:
     steps:
     - name: Git - Get Sources
       uses: actions/checkout@master
+
+    - name: Run playbook
+      uses: dawidd6/action-ansible-playbook@v2
+      with:
+        playbook: main.yml
+        directory: ./Ansible
+        inventory: |
+          [all]
+          workshopdevopspierrc.eastus2.cloudapp.azure.com
