--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -12,7 +12,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Git - Get Sources
-      uses: actions/checkout@master  
+      uses: actions/checkout@master
+
+    - name: Setup remote
+      run:  |
+        echo "${{secrets.SSH_PUBLIC_KEY}}" | sudo tee /etc/ssh/authorized_keys
+        sudo tee /etc/ssh/sshd_config <<EOF
+          PasswordAuthentication no
+          PubkeyAuthentication yes
+          AuthorizedKeysFile /etc/ssh/authorized_keys
+          PermitRootLogin no
+          Subsystem sftp /usr/lib/openssh/sftp-server
+        EOF
+        sudo systemctl restart sshd
 
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
