--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -14,24 +14,9 @@ jobs:
     - name: Git - Get Sources
       uses: actions/checkout@master
 
-    - name: Setup remote
-      run:  |
-        echo "${{secrets.SSH_PUBLIC_KEY}}" | sudo tee /etc/ssh/authorized_keys
-        sudo tee /etc/ssh/sshd_config <<EOF
-          PasswordAuthentication no
-          PubkeyAuthentication yes
-          AuthorizedKeysFile /etc/ssh/authorized_keys
-          PermitRootLogin no
-          Subsystem sftp /usr/lib/openssh/sftp-server
-        EOF
-        sudo systemctl restart sshd
-
     - name: Run playbook
-      uses: dawidd6/action-ansible-playbook@v2
+      uses: jawher/action-ansible@2.9.7
+      env:
+        ANSIBLE_SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       with:
-        playbook: main.yml
-        directory: ./Ansible
-        key: ${{secrets.SSH_PRIVATE_KEY}}
-        inventory: |
-          [all]
-          20.36.191.190
+        args: ansible-playbook -i Ansible/hosts.yml Ansible/main.yml
