--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,10 +1,9 @@
 name: Workflow deploiement du site web
 on:
   push:
-    branches:
-    - master
+    branches: [ master ]    
     path:
-    - './Web/*'
+    - "./Web/*"
 
 jobs:
   build-and-deploy:
