--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Git - Get Sources
       uses: actions/checkout@master
       
-    - name: Azure Login Az Cli
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    #- name: Azure Login Az Cli
+    #  uses: azure/login@v1
+    #  with:
+    #    creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
@@ -24,3 +24,7 @@ jobs:
         playbook: main.yml
         directory: ./Ansible
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      options: |
+        -i hosts.yml
+               
